# fhe-deck-core

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  error_tests  fft_mul_tests  fhe_context_test  gadget_tests  hexl_test  lwe_test  ntru_test  ntrunium_tests  performance_tests  readme.md  readme.txt  rlwe_hom_acc_scheme_tests  rlwe_tests  rotation_poly_test  type_tests  z.cereal  z_ct.cereal
bench/: CMakeLists.txt  add3_boolean.cpp  add3_lut2.cpp  add3_lut2fa.cpp  add3_lut3.cpp  add3_lut3fa.cpp  add3_lut4.cpp  add3_lut4fa.cpp  add4_boolean.cpp  add4_lut2.cpp  add4_lut2fa.cpp  add4_lut3.cpp  add4_lut3fa.cpp  add4_lut4.cpp  add4_lut4fa.cpp  calculator_boolean.cpp  calculator_lut2.cpp  calculator_lut2fa.cpp  calculator_lut3.cpp  calculator_lut3fa.cpp  calculator_lut4.cpp  calculator_lut4fa.cpp  const4_boolean.cpp  const4_lut2.cpp  const4_lut2fa.cpp  const4_lut3.cpp  const4_lut3fa.cpp  const4_lut4.cpp  const4_lut4fa.cpp  fhedeck.cpp  image_gaussian_boolean.cpp  image_gaussian_lut2.cpp  image_gaussian_lut2fa.cpp  image_gaussian_lut3.cpp  image_gaussian_lut3fa.cpp  image_gaussian_lut4.cpp  image_gaussian_lut4fa.cpp  image_ricker_boolean.cpp  image_ricker_lut2.cpp  image_ricker_lut2fa.cpp  (+61 more)
examples/: CMakeLists.txt  amortized_bit_operations.cpp  bit_operations.cpp  example_ks_bootstrap.cpp  example_ks_bootstrap_amort.cpp  fhe_context_examples.cpp  fhewsyn.cpp  fhewsyn_boolean.cpp  fhewsyn_checkbool.cpp  fhewsyn_checklut3fa.cpp  fhewsyn_cleartext.cpp  fhewsyn_lut3.cpp  fhewsyn_lut3fa.cpp  fhewsyn_lut4.cpp  full_domain_functional_bootstrap_examples.cpp  integers_examples.cpp  params.cpp  partial_domain_functional_bootstrap_examples.cpp  partial_domain_signed_ints_example.cpp  serialization_example.cpp
include/: ciphertext.h  enums.h  fft_plan.h  fhe_context.h  fhe_deck.h  gadget.h  global_headers.h  lwe.h  lwe_param.h  ntru.h  ntru_param.h  ntrunium.h  ntrunium_gen.h  plaintext_encoding.h  rlwe.h  rlwe_hom_acc_scheme.h  rlwe_hom_acc_scheme_gen.h  rlwe_param.h  rotation_poly.h  sample.h  utils.h
include/ciphertexts/: ciphertexts.h  lwe.h  ntru.h  polynomial_ciphertext.h  rlwe.h  vector_ciphertext.h
include/common/: ciphertext.h  common.h  enums.h  fft_plan.h  fftw_engines.h  fhe_context.h  gadget.h  lwe_param.h  polynomial.h  polynomial_multiplication_engine_builder.h  rotation_poly.h  sample.h  utils.h
include/fhe/: blind_rotation.h  cggi_blind_rotation.h  ciphertext_sanitization.h  fhe.h  fhe_configuration.h  functional_bootstrap.h  ginx_blind_rotation.h  klu_sch_functional_bootstrap.h  ks_functional_bootstrap.h  lmp_functional_bootstrap.h  vector_ciphertext.h
include/interface/: ciphertext.h  fhe_context.h  integers.h  interface.h  plaintext_encoding.h  rotation_poly.h
include/keyswitch/: keyswitch.h  lwe_to_lwe_keyswitch.h  lwe_to_rlwe_keyswitch.h
include/lwe/: lwe.h  lwe_to_lwe_keyswitch.h
include/math/: euclidean_inversion_engine.h  fft_plan.h  fftw_engine.h  fftw_engines.h  fftw_long_engine.h  intel_hexl_engine.h  math.h  naive_multiplication_engine.h  ntl_inversion_engine.h  polynomial.h  polynomial_inversion_engine_builder.h  polynomial_inversion_engines.h  polynomial_multiplication_engine_builder.h  vector.h
include/ntru/: ntru.h  ntru_param.h  ntrunium.h  ntrunium_gen.h
include/rlwe/: ginx_blind_rotation.h  rlwe.h  rlwe_hom_acc_scheme.h  rlwe_hom_acc_scheme_gen.h  rlwe_param.h
src/: ciphertext.cpp  fft_plan.cpp  fhe_context.cpp  gadget.cpp  lwe.cpp  lwe_param.cpp  ntru.cpp  ntru_param.cpp  ntrunium.cpp  ntrunium_gen.cpp  plaintext_encoding.cpp  rlwe.cpp  rlwe_hom_acc_scheme.cpp  rlwe_hom_acc_scheme_gen.cpp  rlwe_param.cpp  rotation_poly.cpp  sample.cpp  utils.cpp
src/ciphertexts/: lwe.cpp  ntru.cpp  rlwe.cpp  vector_ciphertext.cpp
src/common/: ciphertext.cpp  fft_plan.cpp  fftw_engines.cpp  fhe_context.cpp  gadget.cpp  lwe.cpp  lwe_param.cpp  plaintext_encoding.cpp  polynomial.cpp  rotation_poly.cpp  sample.cpp  utils.cpp
src/fhe/: blind_rotation.cpp  cggi_blind_rotation.cpp  ciphertext_sanitization.cpp  fhe_configuration.cpp  functional_bootstrap.cpp  ginx_blind_rotation.cpp  klu_sch_functional_bootstrap.cpp  ks_functional_bootstrap.cpp  lmp_functional_bootstrap.cpp
src/interface/: ciphertext.cpp  fhe_context.cpp  integers.cpp  plaintext_encoding.cpp  rotation_poly.cpp
src/keyswitch/: lwe_to_lwe_keyswitch.cpp  lwe_to_rlwe_keyswitch.cpp
src/lwe/: lwe.cpp  lwe_to_lwe_keyswitch.cpp
src/math/: euclidean_inversion_engine.cpp  fft_plan.cpp  fftw_engine.cpp  fftw_engines.cpp  fftw_long_engine.cpp  intel_hexl_engine.cpp  naive_multiplication_engine.cpp  ntl_inversion_engine.cpp  polynomial.cpp  polynomial_inversion_engine_builder.cpp  polynomial_inversion_engines.cpp  polynomial_multiplication_engine_builder.cpp  vector.cpp
src/ntru/: ntru.cpp  ntru_param.cpp  ntrunium.cpp  ntrunium_gen.cpp
src/rlwe/: ginx_blind_rotation.cpp  rlwe.cpp  rlwe_hom_acc_scheme.cpp  rlwe_hom_acc_scheme_gen.cpp  rlwe_param.cpp
tests/: CMakeLists.txt  amortized_bit_operations_test.cpp  bit_operations_test.cpp  error_tests.cpp  example_ks_bootstrap.cpp  example_ks_bootstrap_amort.cpp  fft_mul_tests.cpp  fhe_context_examples_test.cpp  fhe_context_test.cpp  gadget_tests.cpp  hexl_test.cpp  integers_examples_test.cpp  inv_engine_test.cpp  lwe_tests.cpp  lwe_to_rlwe_key_switch_test.cpp  mul_engine_test.cpp  ntru_tests.cpp  ntrunium_tests.cpp  performance_tests.cpp  rlwe_hom_acc_scheme_tests.cpp  rlwe_tests.cpp  rotation_poly_test.cpp  test_main.cpp  tfhe_noise_tests.cpp  type_tests.cpp  verbose_stream.hpp
